fix css of show-url scrollbar

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -23,3 +23,11 @@ body {
   height:100%;
   border: none;
 }
+
+#web-view-url {
+  display:inline-flex;
+  position:absolute;
+  width:100%;
+  height:95%;
+  border: none;
+}
